src/ahparser/http.h

#ifndef AHPARSER_PROTOCOL_H
#define AHPARSER_PROTOCOL_H

typedef enum {
  AHP_METHOD_OPTIONS = 0,
  AHP_METHOD_GET,
  AHP_METHOD_HEAD,
  AHP_METHOD_POST,
  AHP_METHOD_PUT,
  AHP_METHOD_DELETE,
  AHP_METHOD_TRACE,
  AHP_METHOD_CONNECT,
  AHP_METHOD_CUSTOM
} ahp_method_t;

typedef enum {
  AHP_VERSION_10 = 0,
  AHP_VERSION_11,
  AHP_VERSION_20
} ahp_version_t;

#endif